# ChangeLog for app-text/iso-codes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.65 2009/03/18 15:19:18 armin76 Exp $

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> iso-codes-3.6.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> iso-codes-3.6.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> iso-codes-3.6.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.6.ebuild:
  Marking iso-codes-3.6 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.6.ebuild:
  Marking iso-codes-3.6 ppc64 stable for bug 260063

  13 Feb 2009; Daniel Gryniewicz <dang@gentoo.org> iso-codes-3.5.1.ebuild,
  iso-codes-3.6.ebuild:
  Update USE flags to require xml from python; bug #233166

*iso-codes-3.6 (10 Feb 2009)

  10 Feb 2009; Peter Volkov <pva@gentoo.org> -iso-codes-3.5.1-r1.ebuild,
  +iso-codes-3.6.ebuild:
  Version bump. Removed 3.5.1-r1 since fix is broken, bug #233166.

*iso-codes-3.5.1-r1 (03 Feb 2009)

  03 Feb 2009; Patrick Lauer <patrick@gentoo.org>
  +iso-codes-3.5.1-r1.ebuild:
  Small dep fix. Closes #233166

*iso-codes-3.5.1 (18 Jan 2009)

  18 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +iso-codes-3.5.1.ebuild:
  Bump to 3.5.1. Fix python xml module dependency problem, bug #233166.

  22 Nov 2008; Jeroen Roovers <jer@gentoo.org> iso-codes-3.3.ebuild:
  Stable for HPPA (bug #246056).

  12 Nov 2008; Brent Baude <ranger@gentoo.org> iso-codes-3.3.ebuild:
  stable ppc64, bug 246056

  09 Nov 2008; nixnut <nixnut@gentoo.org> iso-codes-3.3.ebuild:
  Stable on ppc wrt bug 246056

  09 Nov 2008; Markus Meier <maekke@gentoo.org> iso-codes-3.3.ebuild:
  amd64 stable, bug #246056

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> iso-codes-3.3.ebuild:
  alpha/arm/ia64/sh/x86 stable wrt #246056
