@@ -1,10 +1,8 @@
-DIST iso-codes-3.2.tar.bz2 5174682 RMD160 4442a659736e33be5dcbb11c0e9c0f6aa8e975b5 SHA1 c652fd683e76d7b78732ee216ad1308b1c564705 SHA256 edc4a000ed36c891069146193daf68bb453071dcb9aba7584cb5271d06aed6d3
 DIST iso-codes-3.3.tar.bz2 5177202 RMD160 0868f49557ef8d1216e69d70af589a645efe8513 SHA1 2f66b4e524fe4fc8bb9bac1bf2253fab8436034e SHA256 3bb9248963dc86e293cf2cb9b0092539c1606c9830c51ddc494297d8a5d5f41a
-DIST iso-codes-3.5.1.tar.bz2 5220212 RMD160 2fd0e9f0d010b82a3877c84a0ceeabc06ef9abb7 SHA1 dbaa594624e4286ef892206e33b2c622639c5703 SHA256 c390e918a43a67ce8c482c9dffb7929be836c8bff99b0c3b001ad44dde7319a3
 DIST iso-codes-3.6.tar.bz2 5241654 RMD160 ce4b9596c8366f758b171c6e0475e642d02ddd9d SHA1 44bd5d5efd36e4c3c6157e1d8fa2448321dded4b SHA256 cee1c7d22f25d6f9ef3d2f36e7195ae311a7783b068b9e1d189330f1a37073b0
-EBUILD iso-codes-3.2.ebuild 980 RMD160 96213e7d0f0cc7d48f9eb1ec6004004ac800b21f SHA1 c37e3f0ae77becc477777ab877e7ea06fd8379ee SHA256 bc04301346090b993d23a35bb92922e27e945b4c6636f05e85e00483c6b9aab9
+DIST iso-codes-3.8.tar.bz2 5323027 RMD160 36ca00481e99c28e958ab85ece7cebfe3c332b51 SHA1 8a62219c7c5eafae0b65b58a61ec4a818fb178c3 SHA256 4cc4c3791f8f569af41b40835080b4b8b0c9305efd1ffebacebb576c518007a0
 EBUILD iso-codes-3.3.ebuild 993 RMD160 9f61f6f4aab2279b2f2992fe780e9e3368128ab7 SHA1 5b694d42a531252bc231984b2be52dda8fc25fe7 SHA256 8c06110489fde5dba803af0199553635781e524fcf4194c998e5d3f55d17dd54
-EBUILD iso-codes-3.5.1.ebuild 986 RMD160 dc2d9c887008697102a9b7e2d4e119b22d88ffb3 SHA1 1d7653e6a9847651cffb277a7f48fdc2d76969e2 SHA256 ac121e70c093af84284254c4ce9e840790557b402a322443c3fe87e8cddcb13d
 EBUILD iso-codes-3.6.ebuild 987 RMD160 7c405dd66159b191ca6bed294f066253372a9fae SHA1 81d3011ec0a109c6b42f466566d07fd16060cc0d SHA256 2aa8493bd1d49096f51080d787018102682392efe83f1743e3e66b0777ad91ae
-MISC ChangeLog 8473 RMD160 68ab5456a93b426cb8930c72c3230f8f0a0e3a03 SHA1 715749a6de61e3f1a303881e1eac30a5197e0374 SHA256 b89521fbeb05d756ace0b44312de78a4e2c5d569cef2ee6992579b9af83a03d8
+EBUILD iso-codes-3.8.ebuild 756 RMD160 b15677c01a0bfe7d0ba091ac0bd77136477e21d4 SHA1 e19377f1803989fab3abe0a592e642957a089414 SHA256 253b63af8635804000b25bd3b4baf84d908e5215dc17bacb43e70fc7d869d03c
+MISC ChangeLog 8768 RMD160 968a52deba3271d2105163334d725361947da4d2 SHA1 cff0e976a75eb27e93cbac4958cc36851afd6786 SHA256 04d6794d11bb210619fd3f20c9949381b827c2ea18695948082cb483080e3ba3
 MISC metadata.xml 387 RMD160 110fb26a8d959cfaa9ded0d5aaf4f3f26860eb66 SHA1 90b5f3b6d4b059b26db56f689f494a854b79f216 SHA256 d5252ca9dce95b72fa3153d212126bfa4594a1cf6868bff0dc205e46891a05e8
