@@ -1,10 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.5.1.ebuild,v 1.2 2009/02/13 16:59:23 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.8.ebuild,v 1.1 2009/04/10 23:04:20 leio Exp $
 
-EAPI="prefix 2"
-
-inherit eutils autotools
+EAPI=2
 
 DESCRIPTION="Provides the list of country and language names"
 HOMEPAGE="http://alioth.debian.org/projects/pkg-isocodes/"
@@ -20,17 +18,6 @@ DEPEND="sys-devel/gettext
 	|| (
 		>=dev-lang/python-2.3[-build,xml]
 		dev-python/pyxml )"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	# fix install location for multilib machines
-	sed -e 's:(datadir)/pkgconfig:(libdir)/pkgconfig:g' \
-		-i Makefile.am || die "sed failed"
-
-	eautomake
-}
 
 src_install() {
 	emake DESTDIR="${D}" install || die "Installation failed"
